[package]
name = "textbox"
version = "0.0.1"
authors = ["Matthew O'Connor <thegreendragon@gmail.com>"]
workspace = ".."

[dependencies]
bitflags = "*"
bit-set = "*"
num-traits = "*"

[target.'cfg(windows)'.dependencies]
winapi = { git = "https://github.com/oconnor0/winapi-rs.git", rev = "textbox" }
wio = { git = "https://github.com/oconnor0/wio-rs.git", rev = "textbox" }
kernel32-sys = "*"

[target.'cfg(unix)'.dependencies]
termbox-sys = "*"
