[package]
name = "textbox"
version = "0.0.1"
authors = ["Matthew O'Connor <thegreendragon@gmail.com>"]
workspace = ".."

[dependencies]
bitflags = "*"
bit-set = "*"
num-traits = "*"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
wio = "0.1.2"
kernel32-sys = "*"

[target.'cfg(unix)'.dependencies]
termbox-sys = "*"
